# HPC-CFD

./: README.md
Assignment1/: CMakeLists.txt  compile_commands.json  conf_cavity.xml  conf_channel.xml  main.cpp
Assignment1/codeframe/: CMakeLists.txt  Makefile  Simulation.h
Assignment1/codeframe/solvers/: PetscSolver.cpp
Assignment1/codeframe/stencils/: StencilFunctions.h  VTKStencil.cpp  VTKStencil.h
Assignment1/solvers/: PetscSolver.cpp
Assignment1/stencils/: ObstacleStencil.cpp  VTKStencil.cpp
